@@ -1,5 +1,9 @@
 version 1.3
 
+	* add: sysctlmibinfo2
+	* delete: sysctlinfo_helpers.h/c, use sysctlinfo via sysctlmibinfo2
+	* delete: sysctlmibinfo
+	* delete: support of the undocumented interface (kern/kern_sysctl.c)
 	* change: opt -m -> -S
 
 2019-10-5 version 1.2.1
